# dhfr-affinity

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: dhfr_sequences.fasta
notebooks/: 01_project1_colab.ipynb  02_project2_boltz2.ipynb
scripts/: run_pipeline.py
src/dhfr_affinity/: __init__.py  dataset.py  evaluate.py  interpret.py  train.py  utils.py
src/dhfr_affinity/data/: __init__.py  chembl.py  clean.py  splits.py
src/dhfr_affinity/features/: __init__.py  ligand.py  protein.py
src/dhfr_affinity/models/: __init__.py  hybrid.py  ligand_gnn.py
