[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dhfr-affinity"
version = "0.1.0"
description = "Structure-aware protein-ligand binding affinity prediction for antifolate small molecules against DHFR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["src"]
